--- a/docs/install.txt
+++ b/docs/install.txt
@@ -1,5 +1,5 @@
-Installing django-pagination
-----------------------------
+Installing the latest development version of django-pagination
+---------------------------------------------------------------
 
 To install, first check out the latest version of the application from
 subversion:
@@ -15,5 +15,26 @@ do the trick for you:
 
     sudo ln -s `pwd`/pagination `python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()"`/pagination
     
-Now it's installed.  Please see README.txt for information on how to use this
+Now it's installed!  Please see usage.txt for information on how to use this
 application in your projects.
+
+Installing via setup.py
+-----------------------
+
+Included with this application is a file named ``setup.py``.  It's possible to
+use this file to install this application to your system, by invoking the
+following command:
+
+    sudo python setup.py install
+
+Once that's done, you should be able to begin using django-pagination at will.
+
+Installing via setuptools
+-------------------------
+
+If you have setuptools_ installed, you can simply run the following command
+to install django-pagination:
+
+    sudo easy_install django-pagination
+
+.. _setuptools: http://peak.telecommunity.com/DevCenter/setuptools
